crates/dbt-jinja/minijinja/tests/snapshots/test_parser__parser@imports.txt.snap
---
source: fs/sa/crates/dbt-jinja/minijinja/tests/test_parser.rs
description: "{% from \"foo.html\" import a, b %}\n{% from \"foo.html\" import a %}\n{% from \"foo.html\" import a as b %}\n{% from \"foo.html\" import a as b, b as c %}\n{% from \"foo.html\" import a, b, %}\n{% from \"foo.html\" import a, %}\n{% from \"foo.html\" import a as b, %}\n{% from \"foo.html\" import a as b, b as c, %}\n{% import \"foo.html\" as x %}"
input_file: fs/sa/crates/dbt-jinja/minijinja/tests/parser-inputs/imports.txt
---
Ok(
    Template {
        children: [
            FromImport {
                expr: Const {
                    value: 'foo.html',
                } @ 1:9-1:19,
                names: [
                    (
                        Var {
                            id: "a",
                        } @ 1:27-1:28,
                        None,
                    ),
                    (
                        Var {
                            id: "b",
                        } @ 1:30-1:31,
                        None,
                    ),
                ],
            } @ 1:1-1:34,
            EmitRaw {
                raw: "\n",
            } @ 1:34-2:1,
            FromImport {
                expr: Const {
                    value: 'foo.html',
                } @ 2:9-2:19,
                names: [
                    (
                        Var {
                            id: "a",
                        } @ 2:27-2:28,
                        None,
                    ),
                ],
            } @ 2:1-2:31,
            EmitRaw {
                raw: "\n",
            } @ 2:31-3:1,
            FromImport {
                expr: Const {
                    value: 'foo.html',
                } @ 3:9-3:19,
                names: [
                    (
                        Var {
                            id: "a",
                        } @ 3:27-3:28,
                        Some(
                            Var {
                                id: "b",
                            } @ 3:32-3:33,
                        ),
                    ),
                ],
            } @ 3:1-3:36,
            EmitRaw {
                raw: "\n",
            } @ 3:36-4:1,
            FromImport {
                expr: Const {
                    value: 'foo.html',
                } @ 4:9-4:19,
                names: [
                    (
                        Var {
                            id: "a",
                        } @ 4:27-4:28,
                        Some(
                            Var {
                                id: "b",
                            } @ 4:32-4:33,
                        ),
                    ),
                    (
                        Var {
                            id: "b",
                        } @ 4:35-4:36,
                        Some(
                            Var {
                                id: "c",
                            } @ 4:40-4:41,
                        ),
                    ),
                ],
            } @ 4:1-4:44,
            EmitRaw {
                raw: "\n",
            } @ 4:44-5:1,
            FromImport {
                expr: Const {
                    value: 'foo.html',
                } @ 5:9-5:19,
                names: [
                    (
                        Var {
                            id: "a",
                        } @ 5:27-5:28,
                        None,
                    ),
                    (
                        Var {
                            id: "b",
                        } @ 5:30-5:31,
                        None,
                    ),
                ],
            } @ 5:1-5:35,
            EmitRaw {
                raw: "\n",
            } @ 5:35-6:1,
            FromImport {
                expr: Const {
                    value: 'foo.html',
                } @ 6:9-6:19,
                names: [
                    (
                        Var {
                            id: "a",
                        } @ 6:27-6:28,
                        None,
                    ),
                ],
            } @ 6:1-6:32,
            EmitRaw {
                raw: "\n",
            } @ 6:32-7:1,
            FromImport {
                expr: Const {
                    value: 'foo.html',
                } @ 7:9-7:19,
                names: [
                    (
                        Var {
                            id: "a",
                        } @ 7:27-7:28,
                        Some(
                            Var {
                                id: "b",
                            } @ 7:32-7:33,
                        ),
                    ),
                ],
            } @ 7:1-7:37,
            EmitRaw {
                raw: "\n",
            } @ 7:37-8:1,
            FromImport {
                expr: Const {
                    value: 'foo.html',
                } @ 8:9-8:19,
                names: [
                    (
                        Var {
                            id: "a",
                        } @ 8:27-8:28,
                        Some(
                            Var {
                                id: "b",
                            } @ 8:32-8:33,
                        ),
                    ),
                    (
                        Var {
                            id: "b",
                        } @ 8:35-8:36,
                        Some(
                            Var {
                                id: "c",
                            } @ 8:40-8:41,
                        ),
                    ),
                ],
            } @ 8:1-8:45,
            EmitRaw {
                raw: "\n",
            } @ 8:45-9:1,
            Import {
                expr: Const {
                    value: 'foo.html',
                } @ 9:11-9:21,
                name: Var {
                    id: "x",
                } @ 9:25-9:26,
            } @ 9:1-9:29,
        ],
    } @ 1:1-9:29,
)
