crates/dbt-jinja/minijinja/tests/snapshots/test_parser__parser@in.txt.snap
---
source: fs/sa/crates/dbt-jinja/minijinja/tests/test_parser.rs
description: "{{ value in sequence }}\n{{ value not in sequence }}\n{{ not value in sequence }}"
input_file: fs/sa/crates/dbt-jinja/minijinja/tests/parser-inputs/in.txt
---
Ok(
    Template {
        children: [
            EmitExpr {
                expr: BinOp {
                    op: In,
                    left: Var {
                        id: "value",
                    } @ 1:4-1:9,
                    right: Var {
                        id: "sequence",
                    } @ 1:13-1:21,
                } @ 1:1-1:24,
            } @ 1:1-1:24,
            EmitRaw {
                raw: "\n",
            } @ 1:24-2:1,
            EmitExpr {
                expr: UnaryOp {
                    op: Not,
                    expr: BinOp {
                        op: In,
                        left: Var {
                            id: "value",
                        } @ 2:4-2:9,
                        right: Var {
                            id: "sequence",
                        } @ 2:17-2:25,
                    } @ 2:1-2:25,
                } @ 2:1-2:28,
            } @ 2:1-2:28,
            EmitRaw {
                raw: "\n",
            } @ 2:28-3:1,
            EmitExpr {
                expr: UnaryOp {
                    op: Not,
                    expr: BinOp {
                        op: In,
                        left: Var {
                            id: "value",
                        } @ 3:8-3:13,
                        right: Var {
                            id: "sequence",
                        } @ 3:17-3:25,
                    } @ 3:4-3:25,
                } @ 3:1-3:28,
            } @ 3:1-3:28,
        ],
    } @ 1:1-3:28,
)
