crates/dbt-jinja/minijinja/tests/snapshots/test_parser__parser@macros.txt.snap
---
source: fs/sa/crates/dbt-jinja/minijinja/tests/test_parser.rs
description: "{% macro foo() %}...{% endmacro %}\n{% macro foo(a, b) %}...{% endmacro %}\n{% macro foo(a, b=42) %}...{% endmacro %}\n{% macro foo(a, b,) %}...{% endmacro %}\n{% macro foo(a, b=42,) %}...{% endmacro %}"
input_file: fs/sa/crates/dbt-jinja/minijinja/tests/parser-inputs/macros.txt
---
Ok(
    Template {
        children: [
            (
                Macro {
                    name: "foo",
                    name_span:  @ 1:10-1:13,
                    args: [],
                    defaults: [],
                    body: [
                        EmitRaw {
                            raw: "...",
                        } @ 1:18-1:21,
                    ],
                    start_tag_span: Some(
                         @ 1:1-1:18,
                    ),
                    end_tag_span: Some(
                         @ 1:21-1:35,
                    ),
                } @ 1:1-1:35,
                Macro,
                {},
            ),
            EmitRaw {
                raw: "\n",
            } @ 1:35-2:1,
            (
                Macro {
                    name: "foo",
                    name_span:  @ 2:10-2:13,
                    args: [
                        Var {
                            id: "a",
                        } @ 2:14-2:15,
                        Var {
                            id: "b",
                        } @ 2:17-2:18,
                    ],
                    defaults: [],
                    body: [
                        EmitRaw {
                            raw: "...",
                        } @ 2:22-2:25,
                    ],
                    start_tag_span: Some(
                         @ 2:1-2:22,
                    ),
                    end_tag_span: Some(
                         @ 2:25-2:39,
                    ),
                } @ 2:1-2:39,
                Macro,
                {},
            ),
            EmitRaw {
                raw: "\n",
            } @ 2:39-3:1,
            (
                Macro {
                    name: "foo",
                    name_span:  @ 3:10-3:13,
                    args: [
                        Var {
                            id: "a",
                        } @ 3:14-3:15,
                        Var {
                            id: "b",
                        } @ 3:17-3:18,
                    ],
                    defaults: [
                        Const {
                            value: 42,
                        } @ 3:19-3:21,
                    ],
                    body: [
                        EmitRaw {
                            raw: "...",
                        } @ 3:25-3:28,
                    ],
                    start_tag_span: Some(
                         @ 3:1-3:25,
                    ),
                    end_tag_span: Some(
                         @ 3:28-3:42,
                    ),
                } @ 3:1-3:42,
                Macro,
                {},
            ),
            EmitRaw {
                raw: "\n",
            } @ 3:42-4:1,
            (
                Macro {
                    name: "foo",
                    name_span:  @ 4:10-4:13,
                    args: [
                        Var {
                            id: "a",
                        } @ 4:14-4:15,
                        Var {
                            id: "b",
                        } @ 4:17-4:18,
                    ],
                    defaults: [],
                    body: [
                        EmitRaw {
                            raw: "...",
                        } @ 4:23-4:26,
                    ],
                    start_tag_span: Some(
                         @ 4:1-4:23,
                    ),
                    end_tag_span: Some(
                         @ 4:26-4:40,
                    ),
                } @ 4:1-4:40,
                Macro,
                {},
            ),
            EmitRaw {
                raw: "\n",
            } @ 4:40-5:1,
            (
                Macro {
                    name: "foo",
                    name_span:  @ 5:10-5:13,
                    args: [
                        Var {
                            id: "a",
                        } @ 5:14-5:15,
                        Var {
                            id: "b",
                        } @ 5:17-5:18,
                    ],
                    defaults: [
                        Const {
                            value: 42,
                        } @ 5:19-5:21,
                    ],
                    body: [
                        EmitRaw {
                            raw: "...",
                        } @ 5:26-5:29,
                    ],
                    start_tag_span: Some(
                         @ 5:1-5:26,
                    ),
                    end_tag_span: Some(
                         @ 5:29-5:43,
                    ),
                } @ 5:1-5:43,
                Macro,
                {},
            ),
        ],
    } @ 1:1-5:43,
)
