crates/dbt-jinja/minijinja/tests/snapshots/test_parser__parser@max-recursion-tags.txt.snap
---
source: fs/sa/crates/dbt-jinja/minijinja/tests/test_parser.rs
description: "{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}\n{% if true %}{% if true %}{% if true %}{% if true %}{% if true %}"
input_file: fs/sa/crates/dbt-jinja/minijinja/tests/parser-inputs/max-recursion-tags.txt
---
Err(
    Error {
        kind: SyntaxError,
        detail: "template exceeds maximum recursion limits",
    },
)
